# CI-CD-Public

./: README.md  requirements.txt
.github/workflows/: ci.yaml  deploy.yaml  deploy.yaml_disabled  env.temp.yaml  env.yaml  preview_infra.temp.yaml_disabled  preview_infra.yml  publish.yaml  test_and_lint.temp.yaml_disabled  test_and_lint.yaml
backend/: Dockerfile  main.py  requirements.txt
backend/test/: test_main.py
client/: pyproject.toml
infrastructure/: Pulumi.dev.yaml  Pulumi.staging.yaml  Pulumi.yaml  README.md  __main__.py  config.py  tmp.py
infrastructure/publish_server/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py  x.py
infrastructure/util/: ecs_ec2.py  lb.py  rds.py
