[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inductor"
version = "0.0.7"
requires-python = ">=3.7"
# license-files = { paths = ["LICENSE"] }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["typer>=0.9.0,<1"]

[project.urls]
Homepage = "https://inductor.ai"

[project.scripts]
inductor = "client.cli:app"

[tool.hatch.build]
packages = ["client"]
only-packages = true
exclude = ["README*"]